Add YAML linting in check and gate
Introduce YAML linting for check and gate queues so that
we don't introduce incorrect YAML in proposed changes.

Includes a couple of nit fixes so that tests actually pass.

Change-Id: Ie07f11a24fb2ad853b49b69fe295bcae2c5764e6

--- a/sdks.yaml
+++ b/sdks.yaml
@@ -30,10 +30,10 @@ tabs:
             download-title: Download
             download-url: https://pypi.org/project/shade/
             desc: >
-              shade is a simple client library for interacting with OpenStack clouds.
-              The key word here is simple. Clouds can do many many many things -
-              but there are probably only about 10 of them that most people care about
-              with any regularity.
+              shade is a simple client library for interacting with OpenStack
+              clouds. The key word here is simple. Clouds can do many many
+              many things - but there are probably only about 10 of them that
+              most people care about with any regularity.
             project-team: Shade
 
       - category: Python SDKs
