expand the 'see-also' section for swift
Change-Id: I65dda995d2299a75a5921048a705e5ab32f7ff19

--- a/openstack_components.yaml
+++ b/openstack_components.yaml
@@ -110,6 +110,9 @@ tabs:
             since: Austin
             see-also:
               - storlets
+              - qinling
+              - barbican
+              - keystone
             video:
               id: _I7vC3oXqRw
               desc: >
