Update the prelude/description
After discussion during API SIG office hours on 12-20-2018 it was agreed
that this wording would help set scope/clarify what is an SDK.
Discussion regarding SDK work was started on the ML and the API SIG
stepped up to lead the initial effort as the work evolves. Thread
available here - http://lists.openstack.org/pipermail/openstack-discuss/2018-December/000691.html

Change-Id: Id0afb9dd040699d8b794c3377553335c35a29658
Signed-off-by: Melvin Hillsman <mrhillsman@gmail.com>

--- a/sdks.yaml
+++ b/sdks.yaml
@@ -6,7 +6,7 @@ tabs:
   - name: SDKs
     map-bucket: openstack-user
     prelude: >
-      Client tools and libraries for OpenStack cloud end users.
+      SDKs are language-specific wrappers around the OpenStack HTTP API.
     categories:
 
       - category: Command-line clients
