--- a/openstack_components.yaml
+++ b/openstack_components.yaml
@@ -548,10 +548,8 @@ tabs:
                 expect to see from the project in the upcoming release.
               title: Horizon - Project Update
             support-teams:
-              i18n:
-                https://governance.openstack.org/tc/reference/projects/i18n.html
-              documentation:
-                https://governance.openstack.org/tc/reference/projects/documentation.html
+              - i18n
+              - documentation
 
   - name: Operations services
     map-bucket: openstack-operations
