Add Zun service dependencies
Add Zun service hard and soft dependencies, based on recent
project update video from Berlin Summit.

Change-Id: I713bb51eb0cb8d207c944a5115b8a07a11eb10cc

--- a/openstack_components.yaml
+++ b/openstack_components.yaml
@@ -48,6 +48,13 @@ tabs:
               technologies.
             project-team: zun
             since: Pike
+            dependencies:
+              - keystone
+              - neutron
+              - kuryr
+            see-also:
+              - cinder
+              - glance
 
           - name: qinling
             title: Functions Service
