Add base dependencies for "main" OpenStack
Add basic information about hard and soft dependencies between
OpenStack services, for the main "openstack" bucket.

Change-Id: I7d7b5e2b587337ea3148469f61eef965cc3d27c2

--- a/openstack_components.yaml
+++ b/openstack_components.yaml
@@ -26,11 +26,15 @@ tabs:
             project-team: nova
             since: Austin
             dependencies:
-              - cinder
+              - keystone
               - neutron
               - glance
             see-also:
+              - cinder
               - ironic
+              - barbican
+              - designate
+              - cyborg
 
           - name: zun
             title: Containers Service
@@ -65,6 +69,12 @@ tabs:
               (like AWS Lambda).
             project-team: qinling
             since: Rocky
+            dependencies:
+              - keystone
+            see-also:
+              - aodh
+              - horizon
+              - swift
             video:
               id: IEmIps9Vgrc
               desc: >
@@ -72,12 +82,6 @@ tabs:
                 what's new in the latest OpenStack release, and what you can
                 expect to see from the project in the upcoming release.
               title: qinling - Project Update
-            dependencies:
-              - keystone
-            see-also:
-              - aodh
-              - horizon
-              - swift
 
       - category: Bare metal
         components:
@@ -93,10 +97,12 @@ tabs:
               containers.
             project-team: ironic
             since: Kilo
-            dependencies:
-              - glance
             see-also:
+              - keystone
               - nova
+              - neutron
+              - glance
+              - swift
 
           - name: cyborg
             title: Accelerators resource management
@@ -110,6 +116,8 @@ tabs:
             project-team: cyborg
             since: Rocky
             dependencies:
+              - keystone
+            see-also:
               - nova
 
       - category: Storage
@@ -155,8 +163,11 @@ tabs:
               drivers for other storage.
             project-team: cinder
             since: Folsom
+            dependencies:
+              - keystone
             see-also:
               - nova
+              - barbican
 
           - name: manila
             title: Shared filesystems
@@ -167,6 +178,10 @@ tabs:
               systems.
             project-team: manila
             since: Liberty
+            dependencies:
+              - keystone
+            see-also:
+              - nova
 
       - category: Networking
         components:
@@ -181,6 +196,8 @@ tabs:
               environments.
             project-team: neutron
             since: Folsom
+            dependencies:
+              - keystone
             see-also:
               - nova
 
@@ -201,13 +218,6 @@ tabs:
               solutions, thereby making Octavia truly suited “for the cloud.”
             project-team: octavia
             since: Liberty
-            video:
-              id: tlaU_-xm-14
-              desc: >
-                Project Updates cover the latest changes in the project. See
-                what's new in the latest OpenStack release, and what you can
-                expect to see from the project in the upcoming release.
-              title: Octavia - Project Update
             dependencies:
               - glance
               - keystone
@@ -216,6 +226,13 @@ tabs:
             see-also:
               - barbican
               - horizon
+            video:
+              id: tlaU_-xm-14
+              desc: >
+                Project Updates cover the latest changes in the project. See
+                what's new in the latest OpenStack release, and what you can
+                expect to see from the project in the upcoming release.
+              title: Octavia - Project Update
 
           - name: designate
             title: DNS service
@@ -225,6 +242,11 @@ tabs:
               Designate provides DNS-as-a-service for OpenStack.
             project-team: designate
             since: Liberty
+            dependencies:
+              - keystone
+            see-also:
+              - nova
+              - neutron
             video:
               id: A8p6FGJwNHM
               desc: >
@@ -261,6 +283,8 @@ tabs:
               to object-storage systems like the OpenStack Swift project.
             project-team: glance
             since: Bexar
+            dependencies:
+              - keystone
             see-also:
               - nova
               - swift
@@ -283,6 +307,14 @@ tabs:
               data.
             project-team: barbican
             since: Liberty
+            dependencies:
+              - keystone
+            see-also:
+              - cinder
+              - murano
+              - nova
+              - octavia
+              - sahara
 
           - name: karbor
             title: Application Data Protection as a Service
@@ -298,6 +330,17 @@ tabs:
               the user.
             project-team: karbor
             since: Pike
+            dependencies:
+              - keystone
+            see-also:
+              - cinder
+              - glance
+              - manila
+              - neutron
+              - nova
+              - neutron
+              - swift
+              - trove
 
           - name: searchlight
             title: Indexing and Search
@@ -313,6 +356,17 @@ tabs:
               appropriate protection of data.
             project-team: searchlight
             since: Liberty
+            dependencies:
+              - keystone
+            see-also:
+              - cinder
+              - glance
+              - designate
+              - neutron
+              - nova
+              - neutron
+              - swift
+              - ironic
 
       - category: Orchestration
         components:
@@ -331,6 +385,27 @@ tabs:
               as a resource in a template.
             project-team: heat
             since: Havana
+            dependencies:
+              - keystone
+            see-also:
+              - aodh
+              - barbican
+              - cinder
+              - designate
+              - glance
+              - magnum
+              - manila
+              - mistral
+              - monasca
+              - neutron
+              - nova
+              - octavia
+              - sahara
+              - senlin
+              - swift
+              - trove
+              - zaqar
+              - zun
 
           - name: senlin
             title: Clustering service
@@ -343,6 +418,11 @@ tabs:
               collections of similar objects easier.
             project-team: senlin
             since: Mitaka
+            dependencies:
+              - keystone
+            see-also:
+              - nova
+              - heat
             video:
               id: juU6Lgo2jxg
               desc: >
@@ -366,6 +446,8 @@ tabs:
               availability.
             project-team: mistral
             since: Liberty
+            dependencies:
+              - keystone
             video:
               id: lV_QPfH_PyE
               desc: >
@@ -391,6 +473,8 @@ tabs:
               SQS and SNS to their customers.
             project-team: zaqar
             since: Liberty
+            dependencies:
+              - keystone
             video:
               id: SbKtx7siiNE
               desc: >
@@ -410,15 +494,27 @@ tabs:
               based on their reservations.
             project-team: blazar
             since: Queens
+            dependencies:
+              - keystone
+              - nova
+            see-also:
+              - cinder
 
           - name: aodh
             title: Alarming Service
+            docs-title: Docs
+            docs-url: https://docs.openstack.org/aodh/latest/
             desc: >
               Aodh's goal is to enable the ability to trigger actions based
               on defined rules against sample or event data collected by
               Ceilometer.
             project-team: Telemetry
             since: Liberty
+            dependencies:
+              - keystone
+            see-also:
+              - ceilometer
+              - heat
 
       - category: Workload provisioning
         components:
@@ -437,7 +533,15 @@ tabs:
             project-team: magnum
             since: Mitaka
             dependencies:
+              - keystone
               - heat
+              - nova
+              - neutron
+              - glance
+              - cinder
+            see-also:
+              - octavia
+              - barbican
 
           - name: sahara
             title: Big Data Processing Framework Provisioning
@@ -475,6 +579,14 @@ tabs:
               non-relational database engines.
             project-team: trove
             since: Icehouse
+            dependencies:
+              - cinder
+              - keystone
+              - glance
+              - nova
+              - swift
+            see-also:
+              - designate
             video:
               id: I5RSL-ApwKY
               desc: >
@@ -499,6 +611,9 @@ tabs:
               API service to manage and control the automated rescue mechanism.
             project-team: masakari
             since: Rocky
+            dependencies:
+              - keystone
+              - nova
             video:
               id: EZAbLpsSPiU
               desc: >
@@ -521,7 +636,12 @@ tabs:
             project-team: murano
             since: Kilo
             dependencies:
+              - keystone
               - heat
+            see-also:
+              - congress
+              - barbican
+              - mistral
             video:
               id: _TYxz6prQmc
               desc: >
@@ -540,6 +660,15 @@ tabs:
               source-to-image process, and simplifying app-centric deployment.
             project-team: solum
             since: Mitaka
+            dependencies:
+              - keystone
+              - heat
+            see-also:
+              - glance
+              - swift
+              - zaqar
+              - barbican
+              - mistral
 
           - name: freezer
             title: Backup, Restore, and Disaster Recovery
@@ -556,6 +685,10 @@ tabs:
               large ephemeral Clouds.
             project-team: freezer
             since: Mitaka
+            dependencies:
+              - keystone
+            see-also:
+              - swift
 
       - category: API proxies
         components:
@@ -569,7 +702,11 @@ tabs:
             project-team: ec2api
             since: Rocky
             dependencies:
+              - keystone
               - nova
+              - neutron
+              - cinder
+              - glance
 
       - category: Web frontend
         components:
@@ -583,7 +720,12 @@ tabs:
               which is extensible and provides a web based user interface to
               OpenStack services.
             project-team: horizon
+            support-teams:
+              - i18n
+              - documentation
             since: Essex
+            dependencies:
+              - keystone
             video:
               id: IMHghWqgly4
               desc: >
@@ -591,9 +733,6 @@ tabs:
                 what's new in the latest OpenStack release, and what you can
                 expect to see from the project in the upcoming release.
               title: Horizon - Project Update
-            support-teams:
-              - i18n
-              - documentation
 
   - name: Operations services
     map-bucket: openstack-operations
